--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -96,6 +96,15 @@
        <script src="src/modules/tarjetadecredito/tarjetadecredito.ctrl.js" type="text/javascript"></script>
        <script src="src/modules/tarjetadecredito/new/tarjetadecredito.new.ctrl.js" type="text/javascript"></script>
        <script src="src/modules/tarjetadecredito/update/tarjetadecredito.update.ctrl.js" type="text/javascript"></script>
+       <script src="src/modules/tarjetadecredito/tarjetadecredito.detail.ctrl.js" type="text/javascript"></script>
+
+       
+       <!--Facturas-->
+       <script src="src/modules/facturas/facturas.mod.js" type="text/javascript"></script>
+       <script src="src/modules/facturas/facturas.ctrl.js" type="text/javascript"></script>
+       <script src="src/modules/facturas/new/facturas.new.ctrl.js" type="text/javascript"></script>
+       <script src="src/modules/facturas/facturas.detail.ctrl.js" type="text/javascript"></script>
+
        
        <!--Compra-->
        <script src="src/modules/compras/compras.mod.js" type="text/javascript"></script>
