--- a/documentos-web/src/main/webapp/src/modules/facturas/facturas.list.html
+++ b/documentos-web/src/main/webapp/src/modules/facturas/facturas.list.html
@@ -1,26 +1,44 @@
 <div id="facturasFondo" style="margin-top: 2%">
     <h1>Facturas</h1></div>
 <div class="container-fluid" style="background-color:#204d74 ">
-<div class="container">
+    <div class="container">
 
-    <div ng-repeat="factura in facturasRecords">
-        <br><br>
-	<div class="row">
-		<div class="col-sm-2">
-			<i class="fas fa-money-bill-alt" style="font-size:50px;color:white"></i>
-		</div>
-		<div class="col-sm-6">
-			<div class="row" style="color:white;background-color:rgb(0,255,255,0.2)" ><p> Costo : {{factura.costo}}</p></div>
-			<div class="row" style="color:white;background-color:rgb(0,0,0,0.2)" ><p> Fecha : {{factura.fecha}}</p></div>
-		</div>
-                <div class="col-sm-4">
-        	<br>
-        	<button type="button" class="btn btn-danger btn-md">Delete</button>
-                <button type="button" class="btn btn-warning btn-md" ui-sref="facturasDetail({facturasId: factura.id})">View</button>
-          
+        <div ng-repeat="factura in facturasRecords">
+            <br><br>
+            <div class="row">
+                <div class="col-sm-2">
+                    <i class="fas fa-money-bill-alt" style="font-size:50px;color:white"></i>
                 </div>
-            <br><br><br>
+                <div class="col-sm-6">
+                    <div class="row" style="color:white;background-color:rgb(0,255,255,0.2)" ><p> Costo : {{factura.costo}}</p></div>
+                    <div class="row" style="color:white;background-color:rgb(0,0,0,0.2)" ><p> Fecha : {{factura.fecha}}</p></div>
+                </div>
+                <div class="col-sm-4">
+                    <br>
+                    <button type="button" class="btn btn-danger btn-md">Delete</button>
+                    <button type="button" class="btn btn-warning btn-md" ui-sref="facturasDetail({facturasId: factura.id})">View</button>
+
+                </div>
+                <br><br><br>
             </div>	
+        </div>
+        <div>
+            <form method="post" action="https://sandbox.checkout.payulatam.com/ppp-web-gateway-payu/">
+                <input name="merchantId"    type="hidden"  value="508029"   >
+                <input name="accountId"     type="hidden"  value="512321" >
+                <input name="description"   type="hidden"  value="Test PAYU"  >
+                <input name="referenceCode" type="hidden"  value="TestPayU" >
+                <input name="amount"        type="hidden"  value="20000"   >
+                <input name="tax"           type="hidden"  value="0"  >
+                <input name="taxReturnBase" type="hidden"  value="0" >
+                <input name="currency"      type="hidden"  value="COP" >
+                <input name="signature"     type="hidden"  value="ba9ffa7155958017558jhgj665ce70b6c37"  >
+                <input name="test"          type="hidden"  value="1" >
+                <input name="buyerEmail"    type="hidden"  value="gregorioospina@hotmail.com" >
+                <input name="responseUrl"    type="hidden"  value="http://www.test.com/response" >
+                <input name="confirmationUrl"    type="hidden"  value="http://www.test.com/confirmation" >
+                <input name="Submit" type="submit"  value="Enviar" class="btn btn-success">
+            </form>
         </div>
     </div>
 </div>
