--- a/documentos-web/src/main/webapp/src/modules/paypal/paypal.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/paypal/paypal.detail.html
@@ -10,13 +10,13 @@
         
         <div class="span2" style="margin-top: 10%">
             <div class="btn-group">
-                <a class=" dropdown-toggle actuabbuton btn-lg" style="color: white" data-toggle="dropdown" href="#">
+                <a class=" dropdown-toggle actuabbuton btn-lg" style="color: white" data-toggle="dropdown" href="!#">
                     Action 
                     <span class="icon-cog icon-white"></span><span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
                     <li><a ui-sref="paypalUpdate({paypalId: currentPaypal.id})"><span class="icon-wrench"></span> Modify</a></li>
-                    <li><a href="#"><span class="icon-trash"></span> Delete</a></li>
+                    <li><a href="!#"><span class="icon-trash"></span> Delete</a></li>
                 </ul>
             </div>
         </div>
