--- a/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.detail.html
@@ -12,13 +12,13 @@
         
         <div class="span2">
             <div class="btn-group">
-                <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#">
+                <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="!#">
                     Action 
                     <span class="icon-cog icon-white"></span><span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a ui-sref="tarjetadecreditoUpdate"><span class="icon-wrench"></span> Modify</a></li>
-                    <li><a href="#"><span class="icon-trash"></span> Delete</a></li>
+                    <li><a ui-sref="tarjetadecreditoUpdate({tarjetadecreditoId: tarjetadecredito.id})"><span class="icon-wrench"></span> Modify</a></li>
+                    <li><a href="!#"><span class="icon-trash"></span> Delete</a></li>
                 </ul>
             </div>
         </div>
