--- a/documentos-web/src/main/webapp/src/modules/libros/create/libros.new.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/create/libros.new.html
@@ -29,6 +29,10 @@
                     <label for="Fecha">Fecha de publicación:</label>
                     <input type="date" class="form-control"  id="fecha" required ng-model="data.fechaPublicacion">
                 </div>
+                <div class="form-group">
+                    <label for="PDF">Fuente PDF</label>
+                    <input type="text" class="form-control" id="pdf" required ng-model="data.pdf">
+                </div>
                 <div class="form-group row">
                     <div class="form-group col-sm-12">
                         <input  ng-click="createLibro()" value="Save" class="w3-btn w3-green"/>
@@ -44,6 +48,10 @@
             <button type="button" class="w3-btn w3-blue" data-toggle="modal" data-target="#modalAutores">Asociar Autores</button>
             <h2></h2>
             <button type="button" class="w3-btn w3-blue" data-toggle="modal" data-target="#modalAreas">Asociar Areas de conocimiento</button>
+            <h2></h2>
+            <button type="button" class="w3-btn w3-blue" data-toggle="modal" data-target="#modalCursos">Asociar Cursos</button>
+            <h2></h2>
+            <button type="button" class="w3-btn w3-blue" data-toggle="modal" data-target="#modalEditorial">Asociar Editorial</button>
             <div id="modalAutores" class="modal fade" role="dialog">
                 <div class="modal-dialog">
 
@@ -77,6 +85,48 @@
                         <div class="modal-body">
                             <ul class ="list-group" ng-repeat="area in areasRecords">
                                 <li class ="list-group-item">{{area.tipo}}<span class="close pull-right" ng-click="asociarArea(area.id)" ><i class="fas fa-plus-square" style="font-size: 24px; color:green;"></i></span></li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div id="modalCursos" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="cerrar" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Escoja Cursos</h4>
+                        </div>
+                        <div class="modal-body">
+                            <ul class ="list-group" ng-repeat="curso in cursosRecords">
+                                <li class ="list-group-item">{{curso.nombre}}<span class="close pull-right" ng-click="asociarCurso(curso.id)" ><i class="fas fa-plus-square" style="font-size: 24px; color:green;"></i></span></li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div id="modalEditorial" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="cerrar" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Escoja Editorial</h4>
+                        </div>
+                        <div class="modal-body">
+                            <ul class ="list-group" ng-repeat="editorial in editorialesRecords">
+                                <li class ="list-group-item">{{editorial.nombre}}<span class="close pull-right" ng-click="asociarEditorial(editorial.id)" ><i class="fas fa-plus-square" style="font-size: 24px; color:green;"></i></span></li>
                             </ul>
                         </div>
                         <div class="modal-footer">
