Se agregaron los filtros en Cursos, editoriales, Fotocopias y Libros.

--- a/documentos-web/src/main/webapp/src/modules/areas/areas.html
+++ b/documentos-web/src/main/webapp/src/modules/areas/areas.html
@@ -69,7 +69,7 @@
                         <h4 style="margin-left:12px; ">Tipo</h4>
                                                    
                         <div class="form-group col-sm-9">
-                            <input type="text" class="form-control"  placeholder="Tipo" ng-model="buscarPorTipo">
+                            <input type="text" class="form-control"  placeholder="Nombre" ng-model="buscarPorTipo">
                         </div> 
                         <div class="form-group col-sm-9">
                            
