--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -140,7 +140,7 @@
                             <li><a ui-sref="cursosList" class="navBusqueda">Cursos</a></li>
                             <li><a ui-sref="autoresList" class="navBusqueda">Autores</a></li>
                             <li><a ui-sref="areasList" class="navBusqueda">Areas de Conocimiento</a></li>
-                            <li><a ui-sref="usuariosList" class="navBusqueda">Usuarios</a></li>
+                            <li><a ui-sref="usuariosList" ng-if="isAuthenticated()" class="navBusqueda">Usuarios</a></li>
                             
 
  
