--- a/documentos-web/src/main/webapp/src/modules/areas/areas.html
+++ b/documentos-web/src/main/webapp/src/modules/areas/areas.html
@@ -17,9 +17,9 @@
    <div class="col-sm-5">
             <div ui-view="detailView"></div>
     </div>
-      <div class =" col-sm-3 thumbnail pull-right" style="margin-top:50px; width:400; margin-right:50px;height:450 ">
+      <div class =" col-sm-3 thumbnail pull-right" ng-if="isAuthenticated()" style="margin-top:50px; width:400; margin-right:50px;height:450 ">
         <div class="container ">
-            <div class="col-md-5">
+            <div class="col-md-5" >
                 <div class="form-area">  
                     <form role="form">
                         <br>
