--- a/documentos-web/src/main/webapp/src/modules/autores/autores.html
+++ b/documentos-web/src/main/webapp/src/modules/autores/autores.html
@@ -17,7 +17,7 @@
     </div>
   
     
-      <div class="col-sm-3 thumbnail pull-right" style="margin-top:50px; width:400 ; margin-right:50px;height:450 ">
+      <div class="col-sm-3 thumbnail pull-right" ng-if="isAuthenticated()" style="margin-top:50px; width:400 ; margin-right:50px;height:450 ">
         <div class="container ">
             <div class="col-md-5">
                 <div class="form-area">  
