--- a/documentos-web/src/main/webapp/src/modules/cursos/cursos.html
+++ b/documentos-web/src/main/webapp/src/modules/cursos/cursos.html
@@ -17,7 +17,7 @@
     </div>
   
     
-     <div class="col-sm-3 thumbnail " style="margin-top:50px; width:400 ; margin-left:50px; height:600 ">
+     <div class="col-sm-3 thumbnail " ng-if="isAuthenticated()" style="margin-top:50px; width:400 ; margin-left:50px; height:600 ">
         <div class="container ">
             <div class="col-md-5">
                 <div class="form-area">  
