--- a/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
@@ -9,18 +9,18 @@
 
 <div class="container-fluid"  >
   
-        <div class="otherListaUsers" style="background:#2c3e50">
+        <div class="otherListaUsers" >
             <div class="" style="margin-top: 20px;">
-                <table class="tablaListaU">
+                <table ng-class="estiloTablaHead">
                     <thead>
                         <tr>
-                            <th class="tablaFede">Id</th>
-                            <th class="tablaFede">nombre</th>
-                            <th class="tablaFede">nombre de usuario</th>
-                            <th class="tablaFede">correo</th>
-                            <th class="tablaFede">edad</th>
-                            <th class="tablaFede">genero</th>
-                            <th class="tablaFede">ver perfil</th>
+                            <th ng-class="estiloTablaLista" >Id</th>
+                            <th ng-class="estiloTablaLista">nombre</th>
+                            <th ng-class="estiloTablaLista">nombre de usuario</th>
+                            <th ng-class="estiloTablaLista">correo</th>
+                            <th ng-class="estiloTablaLista">edad</th>
+                            <th ng-class="estiloTablaLista">genero</th>
+                            <th ng-class="estiloTablaLista">ver perfil</th>
 
                         </tr>
                     </thead>
