--- a/documentos-web/src/main/webapp/src/modules/login/login.html
+++ b/documentos-web/src/main/webapp/src/modules/login/login.html
@@ -1,8 +1,11 @@
-<div ng-if="!isAuthenticated()" class="container">
+<div class="container-fluid" style="padding-top: 7%; background-image: url('https://preview.ibb.co/dRGVqd/black_and_white_books_design_34627.jpg');">
+<div class="col-md-4"></div>
+<div class="col-md-4" ng-if="!isAuthenticated()" >
     <form class="form-signin">
         <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-        <h1 class="form-signin-heading text-muted">Iniciar Sesión</h1>
+        <center><img src="https://image.freepik.com/free-icon/male-user-shadow_318-34042.jpg" class="w3-circle" alt="Norway" style="height: 40%; width: 60%"></center>
         <input type="text" class="form-control" placeholder="Nombre de usuario" required="" autofocus="" ng-model="data.username">
+        <h1></h1>
         <input type="password" class="form-control" placeholder="Contraseña" required="" ng-model="data.password">
         <br>
         <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="autenticar()">
@@ -10,4 +13,6 @@
         </button>
         <a class="btn btn-lg btn-primary btn-block" ui-sref="librosList">Cancelar</a>
     </form>
+</div>
+<div class="col-md-4"></div>
 </div>
